Improve null handling and fix bugs